# 2024_automotive_software_7

./: README.md  launch.sh
src/app/autonomous_driving/: CMakeLists.txt  package.xml
src/app/autonomous_driving/include/: autonomous_driving_node.hpp  lane_fitting.hpp  lane_processing_node.hpp
src/app/autonomous_driving/launch/: autonomous_driving.launch.xml
src/app/autonomous_driving/src/: autonomous_driving_node.cpp  lane_fitting.cpp  lane_processing_node.cpp
src/app/mission_manager/src/: mission_manager_node.cpp
src/rte/msg/ad_msgs/msg/: MergeInput.msg
